fixes header grid layout on mobile

--- a/scss/_component.header.scss
+++ b/scss/_component.header.scss
@@ -9,7 +9,7 @@
 }
 
 .header__brand {
-  @include grid-column(2);
+  @include grid-column(4);
 
   @include grid-media($neat-grid-medium) {
     @include grid-column(3);
@@ -21,8 +21,7 @@
 }
 
 .header__nav {
-  @include grid-column(2);
-  @include grid-push(3);
+  @include grid-column(3);
   position: relative;
   top: -1 * .4em; // 12px / 30px
 
